--- a/characters/mirabela.html
+++ b/characters/mirabela.html
@@ -4,88 +4,180 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mirabela</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../all.css" />
+    <link rel="stylesheet" href="../index.css" />
     <style>
-      p {
-        font-family: Arial;
-        width: 1000px;
+      .button-format-child {
+        float: left;
+      }
+      .character-image {
+        height: 250px;
+        border: solid;
+        border-radius: 3px;
+        border-width: 2px;
+        border-color: rgba(28, 28, 28, 0.9);
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .description-child {
+        margin-bottom: 50px;
+        text-align: left;
+      }
+      .sub-header {
+        text-decoration: underline;
         line-height: 20px;
+        margin-bottom: 100px;
+      }
+      .dm-story {
+        width: 1000px;
+        margin: 0px;
+        text-align: left;
+        display: inline-block;
+        line-height: 22px;
+        background-color: rgba(28, 28, 28, 0.2);
+        border-radius: 3px;
+        text-indent: 4ch;
+        padding: 1ch;
       }
     </style>
   </head>
   <body>
-    <a href="../index.html">Home Page</a>
-    <a href="/cities.html">Cities</a>
-    <h1>Mirabela</h1>
-    <p>
-      Part succubus. Claims to want to be a mother figure to us but there's a
-      lot of contention to that. She is very helpful though. She was apparently
-      Petruzzo's... GF? She leads The Followers of the lunar eclipse which
-      Srebash is apart of.
-    </p>
-    <p>As a witch, Mirabel focuses on curses.</p>
-    <p>
-      Being a powerful witch, Mirabel has helped us with suplies and information
-      throughout our journeys in the Merky Den.
-    </p>
-    <h2>DM stories</h2>
-    <p>
-      It was a dark night. Dark, yet clear. The moon was clear and bright in the
-      sky above, and through the wood, a young girl of pale complexion and
-      infernal blood was running for her life. She just finished 16 winters and
-      now the only thing on her mind was that she may not experience the 17th
-      one. Running and running through the dense foliage of the dark woods, her
-      long, beautiful dress was cut by branches and muddied from every fall.
-      Yet, she needed to run. Her life depended on that. It was a story as old
-      as there were daughters of dukes. An assassination? Maybe. An abduction?
-      Possible. Some religious purists wanting to rid this world from the
-      infernal taint? Well, that’s a very personal kind of problem. Even though
-      she tried to hide it with luxurious hairstyling and expensive accessories,
-      you can only do so much with those horns and long ears. Still, that dint
-      matter now. Now, she needed to run. Whoever was hunting her was close. The
-      light of their torches was clear to see. Run, fall, run, and once again,
-      fall. This time, there was a problem though. A slope, and she dived right
-      into a dark abyss. To some, this is a curse, but to others, a blessing. To
-      her, it was both. Battered and bruised, she ended up in a deep hole hidden
-      in the foliage with no way of getting out. As she was lying there, the
-      only sound she could hear was the men that hunted her. By the star’s
-      grace, they walked past and left her behind. One problem dealt with.
-      Another now started to sink in. She was doomed. She was doomed to live out
-      the rest of her life in this hole. A short life, very short life. Well,
-      that said, she poses something that would help her that many people don’t
-      have. Magic. Though it would be not much help here, except for making a
-      fire from the twigs that were lying there. For 2 days, she managed to get
-      by, but unfortunately, malnutrition was kicking in. She had heat from the
-      fire she could conjure up, and water was down to pure luck. It happened to
-      rain a fair while, so she managed to get by. But now, hunger truly had
-      become unbearable. To some, this would be a wakeup call for the last ounce
-      of strength to try to get out. That’s at least how stories go. But not
-      her. Her legs were bruised severely, and she never belonged to those that
-      had much in the physical department. Even the simple fact that she managed
-      to last that long defied all odds. But even if she managed to get out, a
-      pack of wolves were circling around her muddy prison. All was lost. Then,
-      she heard the skirmishing sound of whimpering animals. And as she looked
-      up, she saw a hooded head looking into the deep hole. "You… need… help?"
-      the figured said in the way of someone who just learned the basics of a
-      language. "Please stranger, I don’t know how long I can take it more," She
-      replied. Let Hell take the caution. This was her only chance. So, she
-      decided to beg the stranger for help. There was no reply and the figure
-      disappeared. That was the longest 10 minutes of her life. Was that just
-      her imagination? Was madness already setting in? As she started to cry and
-      contemplate her own sanity, a piece of rope hit her on her head. "Tie to
-      waist. I pull." The figure said. She wiped her tears and did as told. As
-      she was pulled up, true joy came over her. All the possibilities that
-      could happen, good or bad, it did not matter. True joy was overcoming her
-      from the simple thing, ascending out of that dark, damp hole. When she
-      finally rose out of the hole and on to the surface, she had taken a
-      moment. A short second to thank the heavens and shed tears for finally
-      getting out. When she composed herself and turned to the kind stranger who
-      helped her, terror overcome her. That was no normal man. It was a kid. No
-      more than 10 winters. Maybe 11. But this was not the source of her fear.
-      No. it was those purple eyes. The eyes of the Templars. The eyes of those
-      that were considered sinners, monsters, undeserving. Eyes of those that
-      were the most savage and brutal soldiers that the Empire subjugated and
-      turned into a personal army of Death.
-    </p>
+    <div class="container">
+      <h1>Characters</h1>
+      <div class="main-area">
+        <div class="button-format-parent">
+          <div class="button-format-child">
+            <form class="button" action="../characters.html">
+              <button type="submit"><h3>Back to Characters</h3></button>
+            </form>
+          </div>
+        </div>
+        <h2 class="header">Mirabela</h2>
+
+        <img
+          class="character-image"
+          src="../characterImages/mirabelaPic.png"
+          alt="characterImages"
+        />
+
+        <ul class="description">
+          <li>
+            <p class="description-child">
+              Part succubus. Claims to want to be a mother figure to us but
+              there's a lot of contention to that. She is very helpful though.
+              She was apparently Petruzzo's... GF? She leads The Followers of
+              the lunar eclipse which Srebash is apart of.
+            </p>
+          </li>
+          <li>
+            <p class="description-child">
+              As a witch, Mirabel focuses on curses.
+            </p>
+          </li>
+          <li>
+            <p class="description-child">
+              Being a powerful witch, Mirabel has helped us with suplies and
+              information throughout our journeys in the Merky Den.
+            </p>
+          </li>
+        </ul>
+        <h3 class="sub-header">DM Stories</h3>
+        <p class="dm-story">
+          It was a dark night. Dark, yet clear. The moon was clear and bright in
+          the sky above, and through the wood, a young girl of pale complexion
+          and infernal blood was running for her life. She just finished 16
+          winters and now the only thing on her mind was that she may not
+          experience the 17th one. Running and running through the dense foliage
+          of the dark woods, her long, beautiful dress was cut by branches and
+          muddied from every fall. Yet, she needed to run. Her life depended on
+          that. It was a story as old as there were daughters of dukes. An
+          assassination? Maybe. An abduction? Possible. Some religious purists
+          wanting to rid this world from the infernal taint? Well, that’s a very
+          personal kind of problem. Even though she tried to hide it with
+          luxurious hairstyling and expensive accessories, you can only do so
+          much with those horns and long ears. Still, that dint matter now. Now,
+          she needed to run. Whoever was hunting her was close.
+        </p>
+        <p class="dm-story">
+          The light from their torches was clear to see. Run, fall, run, and
+          once again, fall. This time, there was a problem; a slope. The girl
+          dove right into a dark abyss. To some, it's a curse, to others, a
+          blessing, but to her? it was both. Battered and bruised, she ended up
+          in a deep hole hidden in the foliage with no way of getting out. As
+          she was lying there, the only sounds she could hear were the shouts
+          the men that hunted her.
+        </p>
+        <p class="dm-story">
+          By the star’s grace, they walked past and left her behind. One problem
+          dealt with. Another now, however, is started to sink in. She was
+          doomed. She was doomed to live out the rest of her life in this pit. A
+          short life, a very short life indeed. Well, with that said, she
+          possesses something that most people don’t have; magic. However it
+          would be not much help here except for making a fire from the twigs
+          that were lying around.
+        </p>
+        <p class="dm-story">
+          For two days, she managed to get by. She had heat from the fire she
+          conjured up, but water was down to pure luck. Fortunately, it happened
+          to rain for a while and her hydration issues were solved.
+          Unfortunately, malnutrition was kicking in. Hunger truly had become
+          unbearable.
+        </p>
+        <p class="dm-story">
+          To some, this would be a wakeup call for them to use their last ounce
+          of strength to somehow escape. Al least, that’s how stories go. But
+          not for the girl. Her legs were bruised severely and she never shined
+          in the physical department. Even the simple fact that she managed to
+          last that long defied all odds. But even if she managed to climb out,
+          a pack of wolves were circling around her muddy prison. All was lost.
+        </p>
+        <p class="dm-story">
+          Then, all of a sudden, she heard the skirmishing sound of whimpering
+          animals. As she looked up, she saw a hooded figure looking into the
+          deep hole. "You… need… help?" the figured said in a way like if
+          someone was just learning the basics of a language. "Please stranger,
+          I don’t know how much longer I can take," She replied. Let Hell take
+          the caution. This was her only chance. So, she decided to beg the
+          stranger for help. There was no reply and the figure disappeared. That
+          was the longest 10 minutes of her life.
+        </p>
+        <p class="dm-story">
+          Was that just her imagination? Was madness already setting in? As she
+          started to cry and contemplate her own sanity, an end of a rope hit
+          her on her head. "Tie to waist. I pull." The figure said. She wiped
+          her tears and did as told. When she was done tying, she felt the rope
+          tighten across her abdomen and she began to rise. As she was pulled
+          up, true joy came over her. All the possibilities that could happen,
+          good or bad, did not matter. She was ascending out of that dark and
+          damp pit.
+        </p>
+        <p class="dm-story">
+          When she finally rose out of the hole and on to the surface, she had
+          taken a moment. She spent a short second to thank the heavens and shed
+          tears for finally breaking out of her prison. When she composed
+          herself and turned to the kind stranger who helped her, terror
+          overcame her. That was no normal man. It was a kid. No more than ten
+          winters, maybe eleven. Although, this was not the source of her fear.
+          No. It was those purple eyes. The eyes of the Templars. The eyes of
+          those who were considered sinners, monsters, undeserving. Eyes of
+          those who were the most savage and brutal soldiers that the Empire
+          subjugated and turned into a personal army of Death.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
