--- a/lore.html
+++ b/lore.html
@@ -4,35 +4,94 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lore</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="all.css" />
+    <link rel="stylesheet" href="index.css" />
+    <style>
+      .button {
+        float: left;
+      }
+      .click-me {
+        color: white;
+        margin-top: 500px;
+      }
+      .lore-story {
+        width: 1000px;
+        margin: 0px;
+        text-align: left;
+        display: inline-block;
+        line-height: 26px;
+        background-color: rgba(28, 28, 28, 0.2);
+        border-radius: 3px;
+        text-indent: 4ch;
+        padding: 1ch;
+      }
+    </style>
   </head>
   <body>
-    <a href="index.html">Home Page</a>
-    <h1>Lore</h1>
-    <h2>Majority coming soon...</h2>
-    <p>
-      As the world decends into darkness and the void terrorizes the world, 3
-      children are being taken by caravan to a dwarven city for refuge.
-    </p>
-    <p>
-      However, after getting there, it is realized that the place has already
-      been taken by the void and the caravan is attacked.
-    </p>
-    <p>
-      The only people to survive that day were those 3 kids as they barely
-      escaped a void beast and took off into the wasteland.
-    </p>
-    <p>
-      Almost dying in the wasteland, the kids were rescued by a mysterious
-      figure named Petruzzo De'Mira.
-    </p>
-    <p>
-      Petruzzo took the children to the City of Cinders, where they were left to
-      grow up in an orphanage.
-    </p>
-    <p>
-      for 11 years, the kids grew up in the City with the ocasional visit or
-      letter from Petruzzo.
-    </p>
+    <div class="container">
+      <h1>Lore</h1>
+      <div class="main-area">
+        <div class="button-format-parent">
+          <div class="button-format-child">
+            <form class="button" action="index.html">
+              <button type="submit"><h3>Back to Home Page</h3></button>
+            </form>
+          </div>
+        </div>
+        <h2 class="header">Chapter 1: The Beginning</h2>
+
+        <p class="lore-story">
+          As the world decends into darkness and the void terrorizes the world,
+          three young children, Bosna, Herold, and Ashlyn, are being taken by a
+          caravan to a dwarven city for refuge. However, after making the
+          distance, it is realized that the place has already fallen to the void
+          as the caravan is attacked. The only ones to survive that day were
+          those three kids, nearly escaping a void beast and taking off into the
+          wasteland. Almost freezing to death in the frigid wasteland, the
+          children were rescued by a mysterious figure named Petruzzo De'Mira.
+        </p>
+        <p class="lore-story">
+          Petruzzo De'Mira is a complicated man. He doesn't talk much about his
+          past, but whatever it was, it has clearly made him very jaded and
+          distant to most. He's a member of the Seekers, a group of highly
+          trained scouts proficient in traversing the wasteland and the complex
+          underground cave systems. Somehow, he found himself with a group of
+          children on the brink of death.
+        </p>
+        <p class="lore-story">
+          Feeling something for these kids, Petruzzo took them to the City of
+          Cinders where they can grow up in an orphanage. Of course, he couldn't
+          just leave them there without visiting from time to time. So, every
+          once in a while, he'd make time in his plans to stop by or write a
+          letter. Once, he even got gifts for them. But, one day, those visits
+          stopped and the letters ran dry.
+        </p>
+        <p class="lore-story">
+          For eleven years, the kids grew up in the city, occasionally being
+          visited Petruzzo or receiving one of his letters. But, for the rest of
+          the time, they were on their own. They had to figure out this twisted
+          world with nothing but each other. Each one of them did something that
+          they resonated with them. Bosna started learning how to become a
+          stalker, the closest thing you can become to a Seeker without having
+          certain connections, Herold became a part of some resistances to fight
+          the tyranny the city, and Ashlyn turned her pain into rage as she
+          began to fight in the streets and even arenas.
+        </p>
+        <p class="lore-story"></p>
+      </div>
+    </div>
   </body>
 </html>
