--- a/cities.html
+++ b/cities.html
@@ -39,6 +39,10 @@
         margin-left: auto;
         margin-right: auto;
         border-radius: 5px;
+        max-width: 90%;
+        max-height: 90%;
+        position: relative;
+        object-fit: contain;
       }
     </style>
   </head>
