--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           darkness as the sun was destroyed. Now, the only light that is left
           are the scattered fragments of the moon still left in the sky.
         </p>
+        <form class="button" action="miss.html">
+          <button type="submit"><h3>Miscellaneous</h3></button>
+        </form>
       </div>
     </div>
   </body>
